@@ -1,3 +1,11 @@
+2009-01-16  Jim Huang  <jserv.tw@gmail.com>
+
+	* src/pcmanx_gtk2.cpp (main): Prevent GTK+ from catching F10.
+
+	* src/view/telnetview.cpp (CTelnetView::OnKeyDown): Handle F1-F12
+	keys.
+	Patched by huyg@newsmth.net .
+
 2009-01-04  Jim Huang  <jserv.tw@gmail.com>
 
 	* src/core/pkgver.c: New file.  Keep version information in
